# sqlite-test-task

./: .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: cmake_windows.yml
